[gd_scene load_steps=7 format=3 uid="uid://cnfy257qyu37d"]

[ext_resource type="Texture2D" uid="uid://4rogdjtstvnx" path="res://sprite/level/spikes.png" id="1_cm1u4"]
[ext_resource type="Script" uid="uid://cf6vlgstfaoln" path="res://spikes_2_0.gd" id="1_l4vbl"]
[ext_resource type="Texture2D" uid="uid://d36w06be5tgi4" path="res://sprite/level/spikes3.png" id="2_l4vbl"]
[ext_resource type="Texture2D" uid="uid://b8rdejvg6mtnk" path="res://sprite/level/spikes2.png" id="3_d62tf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_djiq1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_d62tf")
}, {
"duration": 1.0,
"texture": ExtResource("1_cm1u4")
}],
"loop": false,
"name": &"full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_d62tf")
}, {
"duration": 1.0,
"texture": ExtResource("2_l4vbl")
}],
"loop": false,
"name": &"lite",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_q3ywt"]
radius = 5.0

[node name="Spikes2_0" type="Area2D"]
script = ExtResource("1_l4vbl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.5449743, 0.54497427, 0.54497427, 1)
sprite_frames = SubResource("SpriteFrames_djiq1")
animation = &"full"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q3ywt")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
